# tallent_plan_course

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  docs.yml  release.yml  rust.yml  test.yml
benches/: benches.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/kvs/: trait.KvsEngine.js
docs/kvs/: all.html  enum.DBCommands.html  enum.KVSError.html  enum.ServerResponse.html  index.html  sidebar-items.js  struct.KVSClient.html  struct.KvStore.html  struct.KvsServer.html  struct.SledStore.html  trait.KvsEngine.html  type.Result.html
docs/kvs/engine/: trait.KvsEngine.html
docs/kvs/error/: enum.KVSError.html  type.Result.html
docs/kvs/kv_store/: struct.KvStore.html
docs/kvs/sled_store/: struct.SledStore.html
docs/kvs_client/: all.html  fn.main.html  index.html  struct.Cli.html
docs/kvs_server/: all.html  constant.LOCK_FILE.html  fn.check_engine.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
docs/src/kvs/: engine.rs.html  error.rs.html  kv_store.rs.html  lib.rs.html  sled_store.rs.html
docs/src/kvs_client/: kvs-client.rs.html
docs/src/kvs_server/: kvs-server.rs.html
project/: Cargo.toml  file.bk
project-1/: Cargo.toml
project-1/src/: lib.rs
project/src/: base.rs  cli_commands.rs  engine.rs  error.rs  kv_store.rs  lib.rs  sled_store.rs
project/src/tcp/: client.rs  protocol.rs  server.rs
project/tests/: tests.rs
src/: error.rs  kv_store.rs  lib.rs
src/storages/: kv_store.rs  sled_store.rs
src/tcp/: client.rs  protocol.rs  server.rs
(+28 files in other folders)
